--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery.liveurl",
+  "name": "jquery-liveurl",
   "description": "jquery.liveurl - a facebook attachment clone",
   "license": "MIT",
   "version": "1.2.2",
